Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 5.11.3
-
Component/s: QPA: Wayland
-
Labels:None
-
Platform/s:
-
Commits:d25b3b7f1059d5561bce3efe7ea903ea76d4e888 (qt/qtwayland/5.12)
Description
Source code is
bool QWaylandOutputMode::operator!=(const QWaylandOutputMode &other) const { return size() != other.size() || refreshRate() != refreshRate(); }
Maybe better code
bool QWaylandOutputMode::operator!=(const QWaylandOutputMode &other) const { return size() != other.size() || refreshRate() != other.refreshRate(); }